# goal-oriented-mech

./: .gitignore  README.md
ThermalSolver/source/: CMakeLists.txt
ThermalSolver/source/.svn/: all-wcprops  entries
ThermalSolver/source/.svn/text-base/: CMakeLists.txt.svn-base
ThermalSolver/source/control/: ElasFlow.C  ElasFlow.h  JAUMIN_Macros.C  MacrosManager.C  MacrosManager.h  MacrosManager.h.Bak  PatchStrategy.C  PatchStrategy.h  buildApplicationLib.h  buildApplicationLib.h~  main.C
ThermalSolver/source/control/.svn/: all-wcprops  entries
ThermalSolver/source/control/.svn/text-base/: ElasFlow.C.svn-base  ElasFlow.h.svn-base  PatchStrategy.C.svn-base  PatchStrategy.h.svn-base  (+2 more)
ThermalSolver/source/element/: BaseElement.C  BaseElement.h  ElementManager.h  LinearTet.C  LinearTet.h  MacrosManager.C~
ThermalSolver/source/element/.svn/: all-wcprops  entries
ThermalSolver/source/fem/: HighOrderNodal.C  HighOrderNodal.h  TetGeom.C  TetGeom.h  TetQuad.C  TetQuad.h
ThermalSolver/source/integrator/: CoordinateTransform.C  CoordinateTransform.h  IntegratorManager.C  IntegratorManager.h  TetrahedronCoordTran.C  TetrahedronCoordTran.h  TetrahedronIntegrator.C  TetrahedronQuadratureInfo.C  TetrahedronQuadratureInfo.h
ThermalSolver/source/integrator/.svn/: all-wcprops  entries
ThermalSolver/source/material/: Material.C  Material.h  MaterialManager.h
ThermalSolver/source/material/.svn/: all-wcprops  entries
ThermalSolver/source/shapefunction/: BaseShapeFunction.C  ShapeFunctionManager.h
ThermalSolver/source/shapefunction/.svn/: all-wcprops  entries
(+72 files in other folders)
